fix: PT 스케줄 취소시 이후 스케줄 회차 재계산 로직 수정